
NOTE : this modified version is still under the Artistic License 2.0

- Updated database for Elsweyr Chapter. Rimmen and Riverhold are now recognized as cities.
- Updated database for Murkmire DLC. Lilmoth is now recognized as a city.
- Updated database for Summerset Chapter. Alinor, Shimmerene, Lillandril and Illumination Academy are now recognized as cities.
- Updated database for Clockwork City DLC. Brass Fortress is now correctly recognized as a city.

Version 1.5.91 : by Calamath
- Expand internal location database tables for future development.

Version 1.5.90 : by Calamath
- Final tweaks and code clean-up.

Version 1.5.90 beta9 : by Calamath
- Separated key-binding configuration strings into localized files for future development.
- Renamed key-binding configuration strings.

Version 1.5.90 beta8 : by Calamath
- Separated add-on configuration panel strings into localized files for future development.
- Some system messages have been changed to clearly indicate that they were output by the LorePlay add-on.

Version 1.5.90 beta7 : by Calamath
- Updated the debug logging feature for future development.

Version 1.5.90 beta6 : by Calamath
[Restructured localization]
- Localization updates including keywords used to recognize dolmens.
- Added FR and JP localization files in addition to EN and DE.
- SmartEmote feature now properly recognizes masculine and feminine nouns of player titles.
- Remaining language-mode dependencies have been restructured into localization strings using ZO_CreateStringId().
- The localization table 'languageTable' is pre-created in the localization file itself, not in the add-on initialization process.

Version 1.5.90 beta5 : by Calamath
[optional LibDebugLogger Support]
- If you use LorePlay add-on normally, you don't need to install LibDebugLogger.
- LibDebugLogger created by sirinsidiator has been newly added to OptionalDependsOn in the add-on manifest files, both LorePlay and LibEventHandler.